# funky

./: .codecov.yaml  .coveragerc  .flake8  .funky  .gitignore  .la.json  .localalias  .pylintrc  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  LocalAlias  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  dev-requirements.txt  funky.reddit  localAlias  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  shared.mk  start.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  ci.md  docs.md  feature.md  misc.md  question.md  refactor.md  security.md  tests.md
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
docs/_static/: custom.css
docs/_templates/: github_button.html
docs/img/: demo.txt
funky/: __init__.py  __main__.py  app.py  commands.py  errors.py
funky/utils/: __init__.py  core.py  log.py  xdg.py
img/: demo.auto
localalias/: __init__.py  __main__.py  app.py  commands.py  errors.py
localalias/shell/: localalias.sh
localalias/utils/: __init__.py  core.py  log.py  xdg.py
scripts/: __init__.py  install-deps  install-system-dev-deps  post_install.py
scripts/shell/: __init__.py  funky.sh  localalias.sh
scripts/zsh/: funky.zsh  localalias.zsh
tests/: Makefile  README.md  conftest.py  runtests  runtests.py  test_app.py  test_commands.py  test_shell.py
tests/__snapshots__/: test_shell.ambr
tests/commands/: conftest.py  (+7 more)
(+5 files in other folders)
