[tool.poetry]
name = "funky"
version = "3.4.0"
description = "Funky takes shell functions to the next level by making them easier to define, more flexible, and more interactive."
authors = ["Bryan Bugyi <bryanbugyi34@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
future = "^0.18.2"
pygments = "2.2.0"
six = "^1.13.0"

[tool.poetry.dev-dependencies]
coverage = "^5.0.2"
codecov = "^2.0.15"
pytest = "^5.3.2"
pytest-cov = "^2.8.1"
pytest-mock = "^2.0.0"
mypy = "^0.761"
mock = "^3.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
